# ChangeLog for dev-php5/pecl-sdo
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-sdo/ChangeLog,v 1.2 2006/09/30 16:29:41 chtekk Exp $

  30 Sep 2006; Luca Longinotti <chtekk@gentoo.org> pecl-sdo-1.0.4.ebuild:
  Fix (R)DEPEND, add checks for PHP USE flags.

*pecl-sdo-1.0.4 (29 Sep 2006)

  29 Sep 2006; Sebastian Bergmann <sebastian@gentoo.org> +metadata.xml,
  +pecl-sdo-1.0.4.ebuild:
  Initial ebuild, closes bug #135997.
